--- a/modules/model/models.yaml
+++ b/modules/model/models.yaml
@@ -9,7 +9,7 @@ tasks:
   target: model
 
 - kind: template
-  fileext: go
+  fileext: .go
   source:
   - templates\model.tmpl
   - templates\kinds.tmpl
