--- a/modules/database/database.yaml
+++ b/modules/database/database.yaml
@@ -1,5 +1,4 @@
 # Configuration
-
 name: Database Generator
 tasks:
 - kind: template
@@ -10,5 +9,15 @@ tasks:
   - templates\schematypes.tmpl
   target: database
   template: schema
+- kind: template
+  fileext: repo.go
+  source:
+  - templates\repo.tmpl
+  - templates\repoupdate.tmpl
+  - templates\repoinsert.tmpl
+  target: database
+  template: repo
+
+
 
 
