databasetest as new module for generic database testing functionality

--- a/modules/mockdatabase/mockdatabase.yaml
+++ b/modules/mockdatabase/mockdatabase.yaml
@@ -6,25 +6,14 @@ tasks:
   fileext: repo.go
   source:
   - mockrepo.go
-  target: mockdatabase
+  target: database
   template: mockrepo
 
 - kind: template
-  fileext: repo_test.go
-  source:
-  - mockrepo_test.go
-  - mockrepo_testtypes.go
-  target: mockdatabase
-  template: mockrepotest
-  
-- kind: template
-  fileext: repo_test.go
+  fileext: _test.go
   source:
   - mockmain_test.go
-  target: mockdatabase
+  target: database
   template: mockmaintest
-  filename: main
-
-
-
-
+  filename: databasemain
+  
